# ainconv-py

./: .gitmodules  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  check_deps.py  pyproject.toml  tox.ini  tox.toml  update_changelog.py
.github/workflows/: main.yml  publish.yml  test.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  requirements.txt
docs/ainconv/: ainconv.detection.rst  ainconv.rst  ainconv.syllable.rst  modules.rst
scripts/: bump_interactive.py  tag_with_changelog.py  update_changelog.py
src/ainconv/: __init__.py  detection.py  syllable.py  utils.py
src/ainconv/conversion/: cyrillic.py  katakana.py  latin.py
tests/: test_conversion.py  test_detection.py  test_syllable.py  test_utils.py
