[tool.poetry]
name = "ainconv"
version = "0.3.0"
description = "Converts Ainu text between different scripts (Katakana, Latin, Cyrillic and more)"
authors = ["mkpoli <mkpoli@mkpo.li>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mkpoli/ainconv"
documentation = "https://ainconv-py.readthedocs.io/en/latest/"
keywords = [
    "ainu",
    "converter",
    "katakana",
    "latin",
    "cyrillic",
    "language",
    "writing system",
    "text preprocessing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing",
]
packages = [{ include = "ainconv", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.2.0"

[tool.poe.tasks]
doc-freeze = "poetry export --format requirements.txt --output docs/requirements.txt --without-hashes --with dev"
test = "pytest"
poetry_build = "poetry build"
check_deps = "poetry run check_deps.py"
changelog = "poetry run update_changelog.py"
build = ["test", "check_deps", "poetry_build"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
myst-parser = "^2.0.0"
sphinx = "^7.2.6"
furo = "^2024.1.29"
icecream = "^2.1.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "ainconv"
ignore_missing_imports = true
